*** empty log message ***

--- a/resources.properties
+++ b/resources.properties
@@ -1,15 +1,11 @@
 # Change the dummy_wizban.gif to the apropriate image, when available.
 # No change in java code needed !
-resources.images.new_project_wizban = res/dummy_wizban.gif
-resources.images.classpath_wizban = res/dummy_wizban.gif
-resources.images.jar_wizban = res/dummy_wizban.gif
-resources.images.main_class_wizban = res/dummy_wizban.gif
-resources.images.java_app_wizban = res/dummy_wizban.gif
-resources.images.jre_wizban = res/dummy_wizban.gif
-resources.images.exe_wizban = res/dummy_wizban.gif
+img.new_project_wizban = res/dummy_wizban.gif
+img.classpath_wizban = res/dummy_wizban.gif
+img.main_class_wizban = res/dummy_wizban.gif
+img.jre_wizban = res/dummy_wizban.gif
+img.exe_wizban = res/dummy_wizban.gif
 
-resources.images.add_item = res/add_item.gif
-resources.images.remove_item = res/remove_item.gif
-resources.images.edit_item = res/edit_item.gif
-resources.images.move_up = res/move_up.gif
-resources.images.move_down = res/move_down.gif
+img.new_project = res/new_project_wizard.gif
+img.move_up = res/move_up.gif
+img.move_down = res/move_down.gif
