--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="lib" path="lib/dtdparser113.jar"/>
 	<classpathentry kind="lib" path="lib/jox116.jar"/>
 	<classpathentry kind="lib" path="lib/boot.jar"/>
-	<classpathentry kind="lib" path="lib/jface.jar"/>
+	<classpathentry sourcepath="E:/dev/eclipse-3.0/plugins/org.eclipse.platform.source_3.0.0/src/org.eclipse.jface_3.0.0/jfacesrc.zip" kind="lib" path="lib/jface.jar"/>
 	<classpathentry kind="lib" path="lib/runtime.jar"/>
-	<classpathentry kind="lib" path="lib/swt.jar"/>
+	<classpathentry sourcepath="E:/dev/eclipse-3.0/plugins/org.eclipse.platform.source.win32.win32.x86_3.0.0/src/org.eclipse.swt.win32_3.0.0/ws/win32/swtsrc.zip" kind="lib" path="lib/swt.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common.jar"/>
 	<classpathentry kind="lib" path="lib/osgi.jar"/>
 	<classpathentry kind="output" path="classes"/>
