Completely got rid of JFace and Friends. No more runtime.jar, boot.jar and all that overkilling stuff. Just lightweight SWT.

--- a/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
+++ b/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
@@ -1,11 +1,5 @@
-# TODO: Change the dummy_wizban.gif to the apropriate image, when available.
-img.wizban.new_project = dummy_wizban.gif
-img.wizban.classpath = dummy_wizban.gif
-img.wizban.main_class = dummy_wizban.gif
+img.actions.new_project=eclipse16.gif
 
-img.new_project_wizard = new_project_wizard.gif
-img.new_project = eclipse16.gif
-img.eclipse32 = eclipse32.gif
-img.eclipse16 = eclipse16.gif
-img.skeleton_selection = eclipse32.gif
-img.skeleton_properties = eclipse32.gif
+img.switcher.skeleton=switcher_skeleton.gif
+img.switcher.application=switcher_application.gif
+img.switcher.executable=switcher_executable.gif
