+ Added the Forms library. Build a nice Welcome screen. + Due to some minor dependencies, needed to include and the JFace library too.     We'll solve these dependencies later.

--- a/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
+++ b/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
@@ -3,3 +3,4 @@ img.actions.new_project=eclipse16.gif
 img.switcher.skeleton=switcher_skeleton.gif
 img.switcher.application=switcher_application.gif
 img.switcher.executable=switcher_executable.gif
+img.switcher.welcome=switcher_welcome.gif
