--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="lib/jox116.jar"/>
 	<classpathentry sourcepath="E:/eclipse30/plugins/org.eclipse.platform.source.win32.win32.x86_3.0.0/src/org.eclipse.swt.win32_3.0.0/ws/win32/swtsrc.zip" kind="lib" path="lib/swt.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common.jar"/>
+	<classpathentry sourcepath="E:/eclipse30/plugins/org.eclipse.platform.source_3.0.0/src/org.eclipse.ui.forms_3.0.0/formssrc.zip" kind="lib" path="lib/forms.jar"/>
+	<classpathentry kind="lib" path="E:/eclipse30/plugins/org.eclipse.core.runtime_3.0.0/runtime.jar"/>
+	<classpathentry kind="lib" path="lib/jface.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
