--- a/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
+++ b/src/net/charabia/jsmoothgen/application/swtgui/resources/jsmooth.properties
@@ -1,6 +1,6 @@
 img.actions.new_project=eclipse16.gif
 
-img.switcher.skeleton=switcher_skeleton.gif
-img.switcher.application=switcher_application.gif
-img.switcher.executable=switcher_executable.gif
-img.switcher.welcome=switcher_welcome.gif
+img.switcher.skeleton=eclipse32.gif
+img.switcher.application=eclipse32.gif
+img.switcher.executable=eclipse32.gif
+img.switcher.welcome=eclipse32.gif
