--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
  <!-- set here the properties specific the release --> 
 
-  <property name="VERSION" value="0.9.8"/>
+  <property name="VERSION" value="0.9.8-2"/>
 
   <!-- You should need to modify the properties below -->
 
@@ -67,7 +67,7 @@
   <target depends="init" name="compile">
     <!-- Compile the java code from ${src} into ${classes} -->
     <echo>Compiling the application from ${src}</echo>
-    <javac deprecation="yes" destdir="${classes}" srcdir="${src}" debug="true">
+    <javac target="1.4" source="1.4" deprecation="yes" destdir="${classes}" srcdir="${src}" debug="true">
        <classpath refid="jsmooth.class.path"/>
     </javac>
   </target>
