--- a/skeletons/simplewrap/samplejar/sample.props
+++ b/skeletons/simplewrap/samplejar/sample.props
@@ -5,7 +5,7 @@ classpath=sample.jar;..\\jsmoothgen.jar
 jvmsearch=registry;jview;javahome;jrepath;jdkpath;exepath;
 minversion=1.1
 maxversion=
-currentdir=..\\..\\..
+currentdir=
 bundledvm=jre
 skel_Message=Java has not been found on your computer. Do you want to download it?
 skel_URL=http://www.java.com
