--- a/skeletons/consolewrapper/Makefile.win
+++ b/skeletons/consolewrapper/Makefile.win
@@ -8,9 +8,9 @@ WINDRES = windres.exe
 RES  = ConsoleWrapper_private.res
 OBJ  = main.o $(RES)
 LINKOBJ  = main.o $(RES)
-LIBS =  -L"/lib" -L"../commonjava" ../commonjava/CommonJava.a 
+LIBS =  -L"/lib" -L"../commonjava" -L"../util-core" ../commonjava/CommonJava.a ../util-core/util-core.a 
 INCS =  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
-CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
+CXXINCS =  -I"/include/c++"  -I"/include/c++/mingw32"  -I"/include/c++/backward"  -I"/include"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32"   -I../util-core
 BIN  = ConsoleWrapper.exe
 CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 CFLAGS = $(INCS) 
