--- a/skeletons/simplewrap/mainres.rc
+++ b/skeletons/simplewrap/mainres.rc
@@ -1,8 +1,8 @@
 
 #include "resource.h"
 
-JARID JAVA "samplejar/sample.jar"
-PROPID JAVA "samplejar/sample.props"
+JARID JAVA "../samplejar/sample.jar"
+PROPID JAVA "../samplejar/sample.props"
 
 A2 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "JWrap.ico"
 
