removed -g debug compilation flag

--- a/skeletons/util-net/Makefile.win
+++ b/skeletons/util-net/Makefile.win
@@ -13,7 +13,7 @@ OBJ  = HttpClient.o URL.o downloadgui.o httpdownload.o $(RES)
 LIBS =  -L"$(MINGW)/lib"  -L"/lib" -lws2_32 $(FLTK-LDFLAGS)
 CXXINCS = -I"../util-core" -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32"  $(FLTK-CXXFLAGS)
 BIN  = $(PROJECTNAME).a
-CXXFLAGS = -g $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
+CXXFLAGS = $(CUSTOMFLAGS) $(CXXINCS) -DJDK="$(JDK)"
 
 .PHONY: all all-before all-after clean clean-custom $(PROJECTNAME)
 
