--- a/skeletons/util-core/Makefile.win
+++ b/skeletons/util-core/Makefile.win
@@ -7,7 +7,7 @@ CC   = gcc.exe
 WINDRES = windres.exe
 MINGW =
 RES  = 
-OBJ  = Log.o Thread.o FileUtils.o StringUtils.o DebugConsole.o $(RES)
+OBJ  = Process.o Log.o Thread.o FileUtils.o StringUtils.o DebugConsole.o $(RES)
 LIBS =  -L"$(MINGW)/lib"  -L"/lib" -lws2_32
 INCS =  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
 CXXINCS =  -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
