--- a/skeletons/consolewrapper/samplejar/sample.props
+++ b/skeletons/consolewrapper/samplejar/sample.props
@@ -1,6 +1,6 @@
 arguments=arg1 arg2 arg3
 mainclassname=Sample
-classpath=sample.jar;..\\jsmoothgen.jar
+classpath=samplejar/sample.jar
 jvmsearch=javahome;registry;jrepath;jdkpath;exepath;jview
 minversion=1.1
 maxversion=
