--- a/skeletons/winservice/sample/sample.props
+++ b/skeletons/winservice/sample/sample.props
@@ -6,9 +6,15 @@ minversion=1.1
 maxversion=
 currentdir=
 bundledvm=jre
-skel_Message=Java has not been found on your computer. Do you want to download it?
+skel_ServiceName=jsmooth test winservice
+skel_ServiceDisplayName=testing a winservice
+skel_Message=This program needs Java to run.\nPlease download it at http://www.java.com
 skel_URL=http://www.java.com
+skel_Autostart=1
 skel_DownloadURL=http://java.sun.com/update/1.5.0/jinstall-1_5_0-windows-i586.cab
+skel_Logfile=mytest.log
+skel_Interactive=1
+skel_Debug=1
 javapropertiescount=1
 javaproperty_name_0=nom1
 javaproperty_value_0=valeur1
